helm/my-app/generated/dev/service.yaml
---
# Source: my-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  labels:
    helm.sh/chart: my-app
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-app
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    
        app.kubernetes.io/name: my-app
        app.kubernetes.io/instance: my-app
---
# Source: my-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  labels:
    helm.sh/chart: my-app
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    
        app.kubernetes.io/name: whoami
        app.kubernetes.io/instance: whoami
